# boringBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  git-dev-ci-cd.yml  pyproject.toml
.github/workflows/: git-dev-ci-cd.yml
app/: main.py
app/api/: app.py  lifespan.py  routes.py
app/bot/: bot.py
app/bot/features/menu/: dispatcher.py  models.py  strategies.py
app/bot/features/tests/: conftest.py
app/bot/fsm/: states.py
app/bot/keyboards/: builders.py
app/bot/middlewares/: __init__.py  clear_messages.py  strategy.py
app/bot/routes/: __init__.py  boring.py  commands.py
app/bot/static/: text_extractor.py  texts.json
app/core/configs/: bot_config.py  common_config.py  database_config.py  external_api_config.py  main_config.py  ngrok_config.py  translators_configs.py
app/database/: collections.py  connector.py
app/database/respositories/: interfaces.py  repositories.py
app/dependencies/: builder.py  configs_map.py  container.py  dependencies.py
app/models/: models.py
app/ngrok/: launcher.py
app/services/: facts.py  interface.py  jokes.py  quiz.py  translator.py
app/services/parsers/: open_tdb.py  parser_interfaces.py
app/services/parsers/tests/: conftest.py  test_parser.py
app/services/parsers/tests/data/: questions.json
app/services/tests/: conftest.py  test_services.py
app/tests/: conftest.py
